[project]
name = "agent-demos"
version = "0.1.0"
description = "LangGraph Agent Demos with MCP Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.3",
    "langchain-mcp-adapters>=0.0.11",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.23",
    "langgraph>=0.4.3",
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Since this is a demo folder with standalone scripts, no build system needed